kubernetes/n8n/namespace.yaml
# ./kubernetes/n8n/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: n8n
