kubernetes/n8n/deployment-n8n.yaml
# ./kubernetes/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
      - name: n8n
        image: n8nio/n8n:latest
        ports:
        - containerPort: 5678
        volumeMounts:
        - mountPath: /home/node/.n8n
          name: n8n-storage
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "4Gi"
            cpu: "1"
      volumes:
      - name: n8n-storage
        persistentVolumeClaim:
          claimName: n8n-pvc
