kubernetes/n8n/svc-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: n8n
spec:
  selector:
    app: n8n-postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
